# sarcalnet-submission-tools

./: .gitignore  CHANGES.md  environment.yml  pyproject.toml  submission-responses.md
api_demo/: sarcalnet_api_demo.ipynb
sarcalnet-ingestion/: ingester.py
sarcalnet-ingestion/test/: README.md
scn_db_tools/: README.md  fill_template_from_db.py  ingest_all.py  ingest_unavailability_sheet.py  ingester.py  update.py
scn_db_tools/test/: test_template_filler.py
scn_db_tools/test/res/: __init__.py  cr_template_v1.5.0.xlsx  dt_template_v1.1.2.xlsx  test_nat_surveys.csv  test_nat_targets.csv  test_sites.csv  test_surveys.csv  test_targets.csv
